# seaorm-mysql-array

./: Cargo.toml  LICENSE  README.md
migration/src/: lib.rs  m_17012023_000001_create_employee.rs  m_17012023_000001_create_projects.rs
src/: main.rs
src/entities/: employee.rs  mod.rs  prelude.rs  projects.rs
