[package]
name = "seaorm-mysql-array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sea-orm = {version = "^0.9.0", features = ["sqlx-mysql", "runtime-async-std-native-tls", "macros"]}
clap = "4.1.1"
tokio = {version = "1.23.0", features = ["full"]}